@@ -624,6 +624,7 @@ Fixed bugs
 - fix issue related to fixing redundant logic-or constraints after presolving
 - fixed bug when parsing logic-or and and-constraints
 - fixed wrong assert in updateLazyBounds()
+- fixed bug in pricestore, which resulted in too many problem variables being added
 
 Miscellaneous
 -------------
